# Laba-4.1

Laba 4.1/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  RightTriangle.cpp  RightTriangle.h  Shape.h  Trapezoid.cpp  Trapezoid.h
